# frontend_quim

./: App.qml  CMakeLists.txt  ComponentPrincipalPage.qml  LoginPage.qml  Main.qml  PopupQuestion.qml  PrincipalComponent.qml  PrincipalPage.qml  README.md  Style.qml  main.cpp  resources.qrc
Login/: LogIn.cpp  LogIn.h
Questions/: questionmanager.cpp  questionmanager.h
Vista/: AboutUs.cpp  AboutUs.h  NavegationManager.cpp  NavegationManager.h  popupquestion.cpp  popupquestion.h
